# untitled-voice-assistant

./: .gitignore  Cargo.toml  Makefile  README.md  flake.nix  run.sh
.github/workflows/: rust.yml
client/: Cargo.toml
client/src/: client.rs  main.rs
llm/: Cargo.toml  README.md
llm/src/: config.rs  lib.rs  main.rs
server/: Cargo.toml  audio.md
server/src/: main.rs  web.rs
server/templates/: index.html
src/: app.rs  client.rs  config.rs  lib.rs  main.rs  socket.rs  sync.rs  whisper.rs
src/app/: command.rs  mod.rs  response.rs  state.rs
src/app/input/: iter.rs
src/audio/: controller.rs  input.rs  mod.rs  process.rs  recording.rs  vad.rs
src/web/: mod.rs
src/whisper/: mod.rs  transcription.rs
