[workspace]
members = [".", "client", "llm", "server"]

[package]
name = "voice"
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
crossbeam = "0.8.4"
itertools = "0.12.1"
thiserror = "1.0.58"
clap = { version = "4.5.4", features = ["derive"] }
regex = "1.10.4"
tracing = { version = "0.1.40", features = ["log"] }
env_logger = "0.11.3"
log = "0.4.21"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
tokio = { version = "1.37.0", features = ["full"] }
derive_builder = "0.20.0"
sttx = { git = "https://github.com/dev-msp/sttx", branch = "main" }
toml = "0.8.12"
whisper-rs = { git = "https://github.com/tazz4843/whisper-rs", branch = "master", features = [ "metal", "whisper-cpp-log" ] }
xdg = "2.5.2"

[dependencies]
llm = { path = "./llm" }

cpal = "0.14.0"
dasp = { version = "0.11.0", features = ["all"] }
hound = "3.5.1"
webrtc-vad = "0.4.0"
ringbuffer = { version = "0.15.0", features = ["alloc"] }

toml = { workspace = true }
xdg = { workspace = true }
whisper-rs = { workspace = true }
sttx = { workspace = true }
crossbeam = { workspace = true }
itertools = { workspace = true }
thiserror = { workspace = true }
clap = { workspace = true }
regex = { workspace = true }
tracing = { workspace = true }
env_logger = { workspace = true }
log = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
derive_builder = { workspace = true }
