[package]
name = "client"
version = "0.1.0"
edition = "2021"

[dependencies]
voice = { path = ".." }
reqwest = "0.12.4"

itertools = { workspace = true }
thiserror = { workspace = true }
clap = { workspace = true }
tracing = { workspace = true }
env_logger = { workspace = true }
log = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
