[package]
name = "llm"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "voice-llm"
path = "./src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.12.4", features = ["json"] }

itertools = { workspace = true }
thiserror = { workspace = true }
clap = { workspace = true }
tracing = { workspace = true }
env_logger = { workspace = true }
log = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
toml = { workspace = true }
xdg = { workspace = true }
derive_builder = { workspace = true }
anyhow = "1.0.82"
chrono = "0.4.38"
