[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
voice = { path = ".." }

itertools = { workspace = true }
thiserror = { workspace = true }
clap = { workspace = true }
tracing = { workspace = true }
env_logger = { workspace = true }
log = { workspace = true }
actix-web = "4.5.1"
crossbeam = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

tokio = { workspace = true }
